fix spacings

--- a/css/style.css
+++ b/css/style.css
@@ -153,4 +153,10 @@ img {
     .steps .col {
         width: 100%;
     }
+
+    *.card{
+        padding-bottom: 1.75rem;
+    }
+
+    
  }
